# vector_transformation

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: CMakeLists.txt  quaternion.h  rotor.h
quaternion/: quaternion.h
tests/: CMakeLists.txt  TEST_quaternion.cpp  TEST_quternion.cpp  TEST_rotate_global.cpp
